[package]
name = "rsdukto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
byte-order = "0.3.0"

# [profile.release]
# lto = true
# codegen-units = 1
# panic = 'abort'
# strip = true
# opt-level = 'z' # only have smaller size after strip
# rpath = true
